--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,34 @@
-pyyaml
-numpy
+certifi==2021.5.30
+charset-normalizer==2.0.4
+click==8.0.1
+colorama==0.4.4
+filelock==3.0.12
+Flask==2.0.1
+huggingface-hub==0.0.12
+idna==3.2
+imdb-sentiment-analysis @ file:///E:/imdb-sentiment-analysis
+importlib-metadata==4.6.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+joblib==1.0.1
+MarkupSafe==2.0.1
+numpy==1.21.0
+packaging==21.0
+Pillow==8.3.0
+pyparsing==2.4.7
+PyYAML==5.4.1
+regex==2021.7.6
+requests==2.26.0
+sacremoses==0.0.45
+six==1.16.0
+tokenizers==0.10.3
 torch==1.7.1+cu101
 torchaudio==0.7.2
 torchvision==0.8.2+cu101
-flask
-transformers
+tqdm==4.62.0
+transformers==4.9.1
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+Werkzeug==2.0.1
+wincertstore==0.2
+zipp==3.5.0
